Memperbarui tampilan fragment profile lagi

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,6 +16,8 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:titleTextAppearance="@style/toolbar_text"
+            app:menu="@menu/profile_menu"
             app:title="@string/title_profile"/>
 
     </com.google.android.material.appbar.AppBarLayout>
