--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,8 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/home_menu"
+            app:titleTextAppearance="@style/toolbar_text"
             app:title="@string/title_home"/>
 
     </com.google.android.material.appbar.AppBarLayout>
