--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/icon_home"
         android:title="@string/title_home"/>
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/baseline_search_24"
+        android:icon="@drawable/user_search_icon"
         android:title="@string/title_search"/>
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/baseline_account_circle_24"
+        android:icon="@drawable/user_icon"
         android:title="@string/title_profile"/>
 
 </menu>
