--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+<!--    <item-->
+<!--        android:id="@+id/share_menu"-->
+<!--        android:title="@string/share_menu"-->
+<!--        android:icon="@drawable/baseline_share_24"-->
+<!--        app:showAsAction="ifRoom"/>-->
+<!--    <item-->
+<!--        android:id="@+id/setting_menu"-->
+<!--        android:title="@string/setting_menu"-->
+<!--        android:icon="@drawable/baseline_settings_24"-->
+<!--        app:showAsAction="always"/>-->
     <item
-        android:id="@+id/share_menu"
-        android:title="@string/share_menu"
-        android:icon="@drawable/baseline_share_24"
-        app:showAsAction="ifRoom"/>
-    <item
-        android:id="@+id/setting_menu"
-        android:title="@string/setting_menu"
-        android:icon="@drawable/baseline_settings_24"
-        app:showAsAction="always"/>
+        android:id="@+id/edit_profile_menu"
+        android:title="@string/edit_profile_menu"
+        app:showAsAction="never"/>
 </menu>
