--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="toolbar_text">
-        <item name="android:fontFamily">@font/notosanssemibold</item>
+        <item name="android:fontFamily">@font/poppinsbold</item>
         <item name="android:textSize">20sp</item>
     </style>
 </resources>
