--- a/app/src/main/res/drawable/email_icon.xml
+++ b/app/src/main/res/drawable/email_icon.xml
@@ -10,6 +10,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/grey"
+      android:strokeColor="#f8b62d"
       android:strokeLineCap="round"/>
 </vector>
