--- a/app/src/main/res/drawable/location_icon.xml
+++ b/app/src/main/res/drawable/location_icon.xml
@@ -10,13 +10,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/grey"
+      android:strokeColor="#64fcc9"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M12,12C13.105,12 14,11.105 14,10C14,8.895 13.105,8 12,8C10.895,8 10,8.895 10,10C10,11.105 10.895,12 12,12Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/grey"
+      android:strokeColor="#64fcc9"
       android:strokeLineCap="round"/>
 </vector>
