--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,6 @@
     </style>
     <style name="toolbar_text">
         <item name="android:fontFamily">@font/poppinsbold</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">20sp</item>\
     </style>
 </resources>
