--- a/app/src/main/res/drawable/user_search_icon.xml
+++ b/app/src/main/res/drawable/user_search_icon.xml
@@ -3,6 +3,7 @@
     android:width="800dp"
     android:height="800dp"
     android:viewportWidth="24"
+    android:tint="?attr/colorControlNormal"
     android:viewportHeight="24"
     tools:ignore="VectorRaster">
   <path
