--- a/app/src/main/res/drawable/user_repository_icon.xml
+++ b/app/src/main/res/drawable/user_repository_icon.xml
@@ -10,7 +10,7 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="@color/grey"
+      android:strokeColor="#374d7c"
       android:strokeLineCap="round"
       tools:ignore="VectorPath" />
 </vector>
