--- a/app/src/main/res/drawable/microphone_icon.xml
+++ b/app/src/main/res/drawable/microphone_icon.xml
@@ -1,11 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
     android:tint="?attr/colorControlNormal"
     android:viewportHeight="24">
   <path
-      android:pathData="M8,12H16M12,8V16M21,12C21,16.971 16.971,21 12,21C7.029,21 3,16.971 3,12C3,7.029 7.029,3 12,3C16.971,3 21,7.029 21,12Z"
+      android:pathData="M19,10V12C19,15.866 15.866,19 12,19M5,10V12C5,15.866 8.134,19 12,19M12,19V22M8,22H16M12,15C10.343,15 9,13.657 9,12V5C9,3.343 10.343,2 12,2C13.657,2 15,3.343 15,5V12C15,13.657 13.657,15 12,15Z"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
