Menyelesaikan tampilan bottom navigation menu

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#919191</color>
     <color name="grey_2">#C6C6C6</color>
+    <color name="blue">#0e3ad6</color>
 </resources>
