--- a/app/src/main/res/drawable/icon_home_fill.xml
+++ b/app/src/main/res/drawable/icon_home_fill.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:width="800dp"
-    android:height="800dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
     tools:ignore="VectorRaster">
@@ -10,6 +10,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="?attr/colorControlNormal"
+      android:strokeColor="#0e3ad6"
       android:strokeLineCap="round"/>
 </vector>
