--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,12 +21,16 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:minHeight="?attr/actionBarSize"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        app:itemRippleColor="@android:color/transparent"
+        app:itemTextAppearanceActiveBoldEnabled="false"
+        app:itemActiveIndicatorStyle="@style/active_bottom_nav"
         android:background="?attr/colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:itemTextColor="@color/text_color_selector"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu"/>
