--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,7 @@
         <item name="android:fontFamily">@font/poppinsbold</item>
         <item name="android:textSize">20sp</item>\
     </style>
+    <style name="active_bottom_nav" parent="@style/Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">?attr/colorOnPrimary</item>
+    </style>
 </resources>
