--- a/app/src/main/res/drawable/user_search_icon_fill.xml
+++ b/app/src/main/res/drawable/user_search_icon_fill.xml
@@ -10,6 +10,6 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#0e3ad6"
+      android:strokeColor="@color/blue"
       android:strokeLineCap="round"/>
 </vector>
