--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
+        app:labelVisibilityMode="selected"
         android:minHeight="?attr/actionBarSize"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
