Menyempurnakan bottom navigation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,10 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="70dp"
-        app:labelVisibilityMode="selected"
         android:minHeight="?attr/actionBarSize"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        app:itemBackground="@drawable/nav_bar_lines"
         app:itemRippleColor="@android:color/transparent"
         app:itemTextAppearanceActiveBoldEnabled="false"
         app:itemActiveIndicatorStyle="@style/active_bottom_nav"
