--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,39 +1,55 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.search.SearchFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <include layout="@layout/search_person"/>
+    <include layout="@layout/search_person"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nsv_content"
+        android:visibility="invisible"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_person_list"
+            android:background="?attr/colorOnPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_person_list"/>
+
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorOnPrimary">
+        android:background="?attr/colorOnPrimary"
+        android:layout_width="match_parent">
 
         <com.google.android.material.search.SearchBar
-            android:id="@+id/search_bar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="16dp"
-            android:backgroundTint="#E8E8E8"
+            android:background="?attr/colorOnPrimary"
             android:hint="@string/searchbar_hint"
-            android:minHeight="?attr/actionBarSize"/>
+            android:id="@+id/searchBar"
+            app:layout_scrollFlags="noScroll"
+            app:backgroundTint="#F0F0F0"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.search.SearchView
-        android:id="@+id/search_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:hint="@string/searchbar_hint"
-        app:backgroundTint="#E8E8E8"
-        app:layout_anchor="@id/search_bar">
+        android:id="@+id/searchView"
+        app:backgroundTint="#F0F0F0"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        app:layout_anchor="@id/searchBar">
+
+        <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
+
     </com.google.android.material.search.SearchView>
-    
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
