--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <include layout="@layout/search_person"
+    <include
+        android:id="@+id/inc_layout_search_person"
+        layout="@layout/search_person"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -34,7 +36,7 @@
             android:hint="@string/searchbar_hint"
             android:id="@+id/searchBar"
             app:layout_scrollFlags="noScroll"
-            app:backgroundTint="#F0F0F0"
+            app:backgroundTint="@color/grey_3"
             android:layout_height="wrap_content"
             android:layout_width="match_parent" />
 
@@ -43,7 +45,7 @@
     <com.google.android.material.search.SearchView
         android:hint="@string/searchbar_hint"
         android:id="@+id/searchView"
-        app:backgroundTint="#F0F0F0"
+        app:backgroundTint="@color/grey_3"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         app:layout_anchor="@id/searchBar">
