--- a/app/src/main/res/layout/item_person_list.xml
+++ b/app/src/main/res/layout/item_person_list.xml
@@ -25,7 +25,7 @@
             tools:src="@tools:sample/avatars"/>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_person_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -38,6 +38,7 @@
             tools:layout_editor_absoluteY="8dp" />
 
         <TextView
+            android:id="@+id/tv_person_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppinsmedium"
