--- a/app/src/main/res/layout/item_person_list.xml
+++ b/app/src/main/res/layout/item_person_list.xml
@@ -35,7 +35,8 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_person_avatar"
-            tools:layout_editor_absoluteY="8dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/tv_person_username"
@@ -46,8 +47,8 @@
             android:textColor="@color/grey"
             android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintStart_toStartOf="@+id/tv_person_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_person_name"
             app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
